@@ -28,8 +28,7 @@ public final class Constant {
   public static final String ACCEPT = "Accept";
   public static final String CONTENT_TYPE = "Content-Type";
 
-  public static final List<String> PRIMARY_API_DOMAIN =
-      Collections.unmodifiableList(Arrays.asList("api.mch.weixin.qq.com", "api.wechatpay.cn"));
+  public static final List<String> PRIMARY_API_DOMAIN = List.of("api.mch.weixin.qq.com", "api.wechatpay.cn");
   public static final String SECONDARY_API_DOMAIN = "api2.wechatpay.cn";
 
   private Constant() {}
