@@ -1,6 +1,5 @@
 package com.wechat.pay.java.core.http;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 
@@ -13,10 +12,6 @@ public class UrlEncoder {
    * @return 编码后的字符串
    */
   public static String urlEncode(String string) {
-    try {
-      return URLEncoder.encode(string, StandardCharsets.UTF_8.name());
-    } catch (UnsupportedEncodingException e) {
-      throw new RuntimeException(e);
-    }
+      return URLEncoder.encode(string, StandardCharsets.UTF_8);
   }
 }
